# Pyrolyse

./: CMakeLists.txt  LICENSE  main.cu
config/: defaults.json
include/pyrolyse/: pyrexport.cuh  pyrimport.cuh  pyrmaths.cuh  pyrrender.cuh  pyrutils.cuh  types.cuh
samples/: bigcube.pyrobj  convert.py  cube.pyrobj  cube2.pyrobj  cube3.pyrobj  cubetest.pyrobj  lightcube.pyrobj  minicube.pyrobj  plane.pyrobj  plate.pyrobj  test.pyrobj
scripts/: convert.py
src/: pyrexport.cu  pyrimport.cu  pyrmaths.cu  pyrrender.cu  pyrutils.cpp  pyrutils.cu
